SLING-2832 : Use resource API SLING-2831 : Use new discovery API SLING-2830 : Discontinue per job configurations for queue processing SLING-2829 : Add API for starting a job and service interface for executing a job
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/bundles/extensions/event@1470462 13f79535-47bb-0310-9956-ffa450edef68